# Linmdtw-in-C-

./: .gitignore  CMakeLists.txt  DTWGPU.cu  DTWGPU.h  alignmenttools.cpp  alignmenttools.h  auditools.cpp  auditools.h  dtw.cpp  dtw.h  dtw_diag_gpu.cu  dtw_diag_gpu.h  dynseqalign.cpp  dynseqalign.h  linmdtw.cpp  linmdtw.h  main.cpp
